tests: Migrate to assertj
Introduced:
 - EngineSearcherAssert
 - TableInfoAssert
 - TranslogSnapshotAssert

to replace hamcrest based custom Matchers